2009-12-18  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Adam Roben.

        Fixed intermittent failure seen on Windows buildbot, and in other JSC
        API clients.
        
        Added a WeakGCPtr class and changed OpaqueJSClass::cachedPrototype to
        use it, to avoid vending a stale object as a prototype.

        * API/JSClassRef.cpp:
        (OpaqueJSClassContextData::OpaqueJSClassContextData):
        (OpaqueJSClass::prototype):
        * API/JSClassRef.h: Use WeakGCPtr.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/WeakGCPtr.h: Added.
        (JSC::WeakGCPtr::WeakGCPtr):
        (JSC::WeakGCPtr::get):
        (JSC::WeakGCPtr::clear):
        (JSC::WeakGCPtr::operator*):
        (JSC::WeakGCPtr::operator->):
        (JSC::WeakGCPtr::operator!):
        (JSC::WeakGCPtr::operator bool):
        (JSC::WeakGCPtr::operator UnspecifiedBoolType):
        (JSC::WeakGCPtr::assign):
        (JSC::::operator):
        (JSC::operator==):
        (JSC::operator!=):
        (JSC::static_pointer_cast):
        (JSC::const_pointer_cast):
        (JSC::getPtr): Added WeakGCPtr to the project.

2009-12-18  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=32720

        * JavaScriptCore.exp:
            - Remove exports for UString::append
        * JavaScriptCore.xcodeproj/project.pbxproj:
            - Make StringBuilder a private header (was project).

2009-12-18  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] GRefPtr does not take a reference when assigned a raw pointer
        https://bugs.webkit.org/show_bug.cgi?id=32709

        Ensure that when assigning a raw pointer to a GRefPtr, the reference
        count is incremented. Also remove the GRefPtr conversion overload as
        GRefPtr types have necessarily incompatible reference counting.

        * wtf/gtk/GRefPtr.h: